# a-maze-ing

./: .gitignore  Makefile  README.md  a_maze_ing.py  amazing.py  config.txt  dfs_path.py  output_maze.txt  pyproject.toml
mazegen/: __init__.py  astar.py  dfs_path.py
mazegen/__pycache__/: astar.py
